# SyedSaif101

./: .gitignore  README.md  _codeql_detected_source_root
pacman/: CMakeLists.txt  Makefile  README.md  pacman.cpp
pacman/_codeql_build_dir/: Makefile  pacman
